[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interactive-brokers-mcp"
version = "0.2.1"
description = "MCP server for Interactive Brokers Gateway — 6 tools for market data and account access via Claude"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.11"
dependencies = [
    "ib_async",
    "nest_asyncio",
    "pandas",
    "pyarrow",
    "pyyaml",
    "python-dotenv",
    "fastmcp",
    "certifi",
    "zstandard",
]

[project.urls]
Homepage = "https://github.com/henrysouchien/ibkr-mcp"
Source = "https://github.com/henrysouchien/ibkr-mcp"

[project.scripts]
ibkr-mcp = "ibkr.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ibkr"]

[tool.hatch.build.targets.sdist]
include = ["ibkr/", "pyproject.toml", "README.md", "LICENSE"]
