[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interactive-brokers-mcp"
version = "0.2.3"
description = "MCP server for Interactive Brokers Gateway — 6 tools for market data and account access via Claude"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.11"
dependencies = [
    "ib_async>=2.1,<3",
    "nest_asyncio>=1.6,<2",
    "pandas>=3.0,<4",
    "pyarrow>=23.0,<24",
    "pyyaml>=6.0,<7",
    "python-dotenv>=1.0,<2",
    "fastmcp>=3.1,<4",
    "certifi>=2024.0.0",
    "zstandard>=0.23,<1",
]

[project.urls]
Homepage = "https://github.com/henrysouchien/ibkr-mcp"
Source = "https://github.com/henrysouchien/ibkr-mcp"

[project.scripts]
ibkr-mcp = "ibkr.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ibkr", "ibkr_mcp"]

[tool.hatch.build.targets.sdist]
include = ["ibkr/", "ibkr_mcp/", "pyproject.toml", "README.md", "LICENSE"]
